2006-03-16  David Zeuthen  <davidz@redhat.com>

	* polkitd/main.c (main): Bail if we can't become primary owner

	* polkitd/polkit-session.c (data_from_pam): Unref when the child dies
	(polkit_session_initiate_auth): Ref the object after creating child
	(polkit_session_initiator_disconnected): Make sure to nuke the kids

2006-03-15  David Zeuthen  <davidz@redhat.com>

	* polkitd/polkit-manager.h: Include sys/types.h; fixed fd.o
	bug #6280. Patch from Wouter Bolsterlee <uws+freedesktop@xs4all.nl>.

2006-03-14  David Zeuthen  <davidz@redhat.com>

	* polkitd/PolicyKit.in: Change priorities from 90 10 to 98 02 to make
	this work

	* polkitd/PolicyKit.conf.in: Remove user="@POLKIT_USER@" bits as I'm
	not sure we need a dedicated user

	* configure.in: Cosmetic things

2006-03-15  Kay Sievers  <kay.sievers@vrfy.org>

	Add SUSE distro bits.

	* configure.in:
	* policy-kit.in:

2006-03-14  David Zeuthen  <davidz@redhat.com>

	Add a bunch of code; basically a full rewrite moving all queries
	to the daemon.

	* COPYING:
	* Makefile.am:
	* configure.in:
	* libpolkit/Makefile.am:
	* libpolkit/libpolkit-test.c:
	* libpolkit/libpolkit.c: (libpolkit_new_context),
	(libpolkit_free_context),
	(libpolkit_get_allowed_resources_for_privilege_for_uid),
	(libpolkit_is_uid_allowed_for_privilege),
	(libpolkit_get_privilege_list):
	* libpolkit/libpolkit.h:
	* policy-kit.in:
	* polkit-interface-manager.xml:
	* polkit-interface-session.xml:
	* polkit.pc.in:
	* polkitd/Makefile.am:
	* polkitd/debug-polkitd.sh:
	* polkitd/main.c: (usage), (delete_pid), (main):
	* polkitd/policy.c: (policy_util_set_policy_directory),
	(policy_element_new), (policy_element_free),
	(policy_element_free_list), (policy_element_dump),
	(txt_backend_read_policy), (policy_get_whitelist),
	(policy_get_blacklist), (policy_get_policies), (afp_process_elem),
	(policy_get_allowed_resources_for_policy_for_uid_gid),
	(policy_is_uid_gid_allowed_for_policy), (policy_util_uid_to_name),